add styling to personal website

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE htmel>
 <html>
     <head>
+        <link rel="stylesheeet" href="styles.css"/>
     </head>
     <body>
         <img src="https://raw.githubusercontent.com/hackclub/dinosaurs/master/smart_dinosaur_docs.png">
